# video-converter

./: README.md  docker-compose.yml
compute/: CMakeLists.txt  main.cpp
compute/src/: CMakeLists.txt  main.cpp
compute/src/log/: CMakeLists.txt  LogLevel.h  Logger.cpp  Logger.h  ModuleLogger.cpp  ModuleLogger.h
compute/src/log/test/: CMakeLists.txt  log_level_tests.cpp  logger_tests.cpp  module_logger_tests.cpp
scripts/docker/: compute-dependencies.Dockerfile  compute-dev.Dockerfile  compute-memcheck.Dockerfile  compute-runtime.Dockerfile
